--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/underscore": "^1.8.0",
     "rxjs": "5.5.2",
     "ts-helpers": "^1.1.1",
+    "data-forge": "^1.0.10",
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
